@@ -7,7 +7,6 @@ import java.lang.reflect.Array;
 import java.lang.reflect.Constructor;
 import java.lang.reflect.Field;
 import java.lang.reflect.InvocationTargetException;
-import java.lang.reflect.Method;
 import java.security.ProtectionDomain;
 import net.devtech.grossfabrichacks.reflection.ReflectionUtil;
 import org.apache.logging.log4j.LogManager;
@@ -23,9 +22,7 @@ public class UnsafeUtil {
     public static final String CLASS_NAME = CLASS.getName();
     public static final Object theUnsafe = getTheUnsafe();
 
-    public static final Object javaLangAccess;
-
-    private static final MethodHandles.Lookup LOOKUP = MethodHandles.lookup();
+    public static final MethodHandles.Lookup IMPL_LOOKUP = ReflectionUtil.getDeclaredFieldValue(MethodHandles.Lookup.class, "IMPL_LOOKUP");
 
     // constants
     public static final boolean x64;
@@ -44,29 +41,25 @@ public class UnsafeUtil {
 
     private static final long FIRST_INT_KLASS;
 
-    private static final Method getInt = getMethod("getInt", Object.class, long.class);
-    private static final Method getLong = getMethod("getLong", Object.class, long.class);
-    private static final Method getObject = getMethod("getObject", Object.class, long.class);
-    private static final Method getAndSetInt = getMethod("getAndSetInt", Object.class, long.class, int.class);
-    private static final Method getAndAddInt = getMethod("getAndAddInt", Object.class, long.class, int.class);
-    private static final Method getAndSetLong = getMethod("getAndSetLong", Object.class, long.class, long.class);
-    private static final Method putInt = getMethod("putInt", Object.class, long.class, int.class);
-    private static final Method putLong = getMethod("putLong", Object.class, long.class, long.class);
-    private static final Method putObject = getMethod("putObject", Object.class, long.class, Object.class);
-    private static final Method putObjectVolatile = getMethod("putObjectVolatile", Object.class, long.class, Object.class);
-    private static final Method objectFieldOffset = getMethod("objectFieldOffset", Field.class);
-    private static final Method staticFieldOffset = getMethod("staticFieldOffset", Field.class);
-    private static final Method arrayBaseOffset = getMethod("arrayBaseOffset", Class.class);
-    private static final Method arrayIndexScale = getMethod("arrayIndexScale", Class.class);
-    private static final Method allocateMemory = getMethod("allocateMemory", long.class);
-    private static final Method copyMemory0 = getMethod("copyMemory", Object.class, long.class, Object.class, long.class, long.class);
-    private static final Method copyMemory1 = getMethod("copyMemory", long.class, long.class, long.class);
-    private static final Method allocateInstance = getMethod("allocateInstance", Class.class);
-    private static final Method defineClass;
-    private static final MethodHandle defineClassHandle;
-
-
-    static {}
+    private static final MethodHandle getInt = getHandle("getInt", int.class, Object.class, long.class);
+    private static final MethodHandle getLong = getHandle("getLong", long.class, Object.class, long.class);
+    private static final MethodHandle getObject = getHandle("getObject", Object.class, Object.class, long.class);
+    private static final MethodHandle getAndSetInt = getHandle("getAndSetInt", int.class, Object.class, long.class, int.class);
+    private static final MethodHandle getAndAddInt = getHandle("getAndAddInt", int.class, Object.class, long.class, int.class);
+    private static final MethodHandle getAndSetLong = getHandle("getAndSetLong", long.class, Object.class, long.class, long.class);
+    private static final MethodHandle putInt = getHandle("putInt", void.class, Object.class, long.class, int.class);
+    private static final MethodHandle putLong = getHandle("putLong", void.class, Object.class, long.class, long.class);
+    private static final MethodHandle putObject = getHandle("putObject", void.class, Object.class, long.class, Object.class);
+    private static final MethodHandle putObjectVolatile = getHandle("putObjectVolatile", void.class, Object.class, long.class, Object.class);
+    private static final MethodHandle objectFieldOffset = getHandle("objectFieldOffset", long.class, Field.class);
+    private static final MethodHandle staticFieldOffset = getHandle("staticFieldOffset", long.class, Field.class);
+    private static final MethodHandle arrayBaseOffset = getHandle("arrayBaseOffset", int.class, Class.class);
+    private static final MethodHandle arrayIndexScale = getHandle("arrayIndexScale", int.class, Class.class);
+    private static final MethodHandle allocateMemory = getHandle("allocateMemory", long.class, long.class);
+    private static final MethodHandle copyMemory0 = getHandle("copyMemory", void.class, Object.class, long.class, Object.class, long.class, long.class);
+    private static final MethodHandle copyMemory1 = getHandle("copyMemory", void.class, long.class, long.class, long.class);
+    private static final MethodHandle allocateInstance = getHandle("allocateInstance", Object.class, Class.class);
+    private static final MethodHandle defineClassHandle = getDefineClassHandle();
 
     /**
      * set the first 4 bytes of an object to something, this can be used to mutate the size of an array
@@ -144,7 +137,6 @@ public class UnsafeUtil {
             getAndAddInt(obj, KLASS_OFFSET, (int) classKlass);
         }
 
-        //noinspection unchecked
         return (B[]) obj;
     }
 
@@ -164,7 +156,6 @@ public class UnsafeUtil {
             getAndSetInt(object, KLASS_OFFSET, (int) (klassValue));
         }
 
-        //noinspection unchecked
         return (B) object;
     }
 
@@ -243,14 +234,10 @@ public class UnsafeUtil {
      * @param parameterTypes the parameter types of {@code name}
      * @return the Unsafe method with the specified name and parameter types.
      */
-    public static Method getMethod(final String name, final Class<?>... parameterTypes) {
+    public static MethodHandle getHandle(final String name, final Class<?> returnType, final Class<?>... parameterTypes) {
         try {
-            final Method method = CLASS.getDeclaredMethod(name, parameterTypes);
-
-            method.setAccessible(true);
-
-            return method;
-        } catch (final NoSuchMethodException exception) {
+            return IMPL_LOOKUP.findVirtual(CLASS, name, MethodType.methodType(returnType, parameterTypes));
+        } catch (final NoSuchMethodException | IllegalAccessException exception) {
             throw new RuntimeException(exception);
         }
     }
@@ -261,7 +248,7 @@ public class UnsafeUtil {
     public static int getInt(final Object object, final long offset) {
         try {
             return (int) getInt.invoke(theUnsafe, object, offset);
-        } catch (final IllegalAccessException | InvocationTargetException exception) {
+        } catch (final Throwable exception) {
             throw new RuntimeException(exception);
         }
     }
@@ -272,7 +259,7 @@ public class UnsafeUtil {
     public static long getLong(final Object object, final long offset) {
         try {
             return (long) getLong.invoke(theUnsafe, object, offset);
-        } catch (final IllegalAccessException | InvocationTargetException exception) {
+        } catch (final Throwable exception) {
             throw new RuntimeException(exception);
         }
     }
@@ -281,91 +268,47 @@ public class UnsafeUtil {
      * Unsafe#getObject
      */
     public static Object getObject(final Object object, final long offset) {
-        try {
-            return getObject.invoke(theUnsafe, object, offset);
-        } catch (final IllegalAccessException | InvocationTargetException exception) {
-            throw new RuntimeException(exception);
-        }
+        return invoke(getObject, theUnsafe, object, offset);
     }
 
     public static int getAndSetInt(final Object object, final long offset, final int value) {
-        try {
-            return (int) getAndSetInt.invoke(theUnsafe, object, offset, value);
-        } catch (final IllegalAccessException | InvocationTargetException exception) {
-            throw new RuntimeException(exception);
-        }
+        return invoke(getAndSetInt, theUnsafe, object, offset, value);
     }
 
     public static int getAndAddInt(final Object object, final long offset, final int value) {
-        try {
-            return (int) getAndAddInt.invoke(theUnsafe, object, offset, value);
-        } catch (final IllegalAccessException | InvocationTargetException exception) {
-            throw new RuntimeException(exception);
-        }
+        return invoke(getAndAddInt, theUnsafe, object, offset, value);
     }
 
     public static long getAndSetLong(final Object object, final long offset, final long value) {
-        try {
-            return (long) getAndSetLong.invoke(theUnsafe, object, offset, value);
-        } catch (final IllegalAccessException | InvocationTargetException exception) {
-            throw new RuntimeException(exception);
-        }
+        return invoke(getAndSetLong, theUnsafe, object, offset, value);
     }
 
     public static void putInt(final Object object, final long offset, final int value) {
-        try {
-            putInt.invoke(theUnsafe, object, offset, value);
-        } catch (final IllegalAccessException | InvocationTargetException exception) {
-            throw new RuntimeException(exception);
-        }
+        invoke(putInt, theUnsafe, object, offset, value);
     }
 
     public static void putLong(final Object object, final long offset, final long value) {
-        try {
-            putLong.invoke(theUnsafe, object, offset, value);
-        } catch (final IllegalAccessException | InvocationTargetException exception) {
-            throw new RuntimeException(exception);
-        }
+        invoke(putLong, theUnsafe, object, offset, value);
     }
 
     public static void putObject(final Object owner, final long offset, final Object value) {
-        try {
-            putObject.invoke(theUnsafe, owner, offset, value);
-        } catch (final IllegalAccessException | InvocationTargetException exception) {
-            throw new RuntimeException(exception);
-        }
+        invoke(putObject, theUnsafe, owner, offset, value);
     }
 
     public static void putObjectVolatile(final Object owner, final long offset, final Object value) {
-        try {
-            putObjectVolatile.invoke(theUnsafe, owner, offset, value);
-        } catch (final IllegalAccessException | InvocationTargetException exception) {
-            throw new RuntimeException(exception);
-        }
+        invoke(putObjectVolatile, theUnsafe, owner, offset, value);
     }
 
     public static long objectFieldOffset(final Field field) {
-        try {
-            return (long) objectFieldOffset.invoke(theUnsafe, field);
-        } catch (final IllegalAccessException | InvocationTargetException exception) {
-            throw new RuntimeException(exception);
-        }
+        return invoke(objectFieldOffset, theUnsafe, field);
     }
 
     public static long staticFieldOffset(final Field field) {
-        try {
-            return (long) staticFieldOffset.invoke(theUnsafe, field);
-        } catch (final IllegalAccessException | InvocationTargetException exception) {
-            throw new RuntimeException(exception);
-        }
+        return invoke(staticFieldOffset, theUnsafe, field);
     }
 
     public static <T> T allocateInstance(final Class<?> klass) {
-        try {
-            return (T) allocateInstance.invoke(theUnsafe, klass);
-        } catch (final IllegalAccessException | InvocationTargetException exception) {
-            throw new RuntimeException(exception);
-        }
+        return invoke(allocateInstance, theUnsafe, klass);
     }
 
     public static <T> Class<T> defineClass(final String binaryName, final byte[] klass) {
@@ -378,53 +321,34 @@ public class UnsafeUtil {
 
     public static <T> Class<T> defineClass(final String binaryName, final byte[] klass,
                                            final ClassLoader loader, final ProtectionDomain protectionDomain) {
-        try {
-            return (ReflectionUtil.JAVA_11
-                ? (Class<T>) defineClassHandle.invoke(javaLangAccess, loader, binaryName, klass, protectionDomain, null)
-                : (Class<T>) defineClass.invoke(theUnsafe, binaryName, klass, 0, klass.length, loader, protectionDomain)
-            );
-        } catch (final Throwable exception) {
-            throw new RuntimeException(exception);
-        }
+        return invoke(defineClassHandle, theUnsafe, binaryName, klass, 0, klass.length, loader, protectionDomain);
     }
 
     public static int arrayBaseOffset(final Class<?> arrayClass) {
-        try {
-            return (int) arrayBaseOffset.invoke(theUnsafe, arrayClass);
-        } catch (final IllegalAccessException | InvocationTargetException exception) {
-            throw new RuntimeException(exception);
-        }
+        return invoke(arrayBaseOffset, theUnsafe, arrayClass);
     }
 
     public static int arrayIndexScale(final Class<?> arrayClass) {
-        try {
-            return (int) arrayIndexScale.invoke(theUnsafe, arrayClass);
-        } catch (final IllegalAccessException | InvocationTargetException exception) {
-            throw new RuntimeException(exception);
-        }
+        return invoke(arrayIndexScale, theUnsafe, arrayClass);
     }
 
     public static long allocateMemory(final long bytes) {
-        try {
-            return (long) allocateMemory.invoke(theUnsafe, bytes);
-        } catch (final IllegalAccessException | InvocationTargetException e) {
-            throw new RuntimeException(e);
-        }
+        return invoke(allocateMemory, theUnsafe, bytes);
     }
 
     public static void copyMemory(final long srcAddress, final long destAddress, final long bytes) {
-        try {
-            copyMemory1.invoke(theUnsafe, srcAddress, destAddress, bytes);
-        } catch (final IllegalAccessException | InvocationTargetException exception) {
-            throw new RuntimeException(exception);
-        }
+        invoke(copyMemory1, theUnsafe, srcAddress, destAddress, bytes);
     }
 
     public static void copyMemory(final Object src, final long srcAddress, final Object dest, final long destAddress, final long bytes) {
+        invoke(copyMemory0, theUnsafe, src, srcAddress, dest, destAddress, bytes);
+    }
+
+    public static <T> T invoke(final MethodHandle method, final Object... arguments) {
         try {
-            copyMemory0.invoke(theUnsafe, src, srcAddress, dest, destAddress, bytes);
-        } catch (final IllegalAccessException | InvocationTargetException exception) {
-            throw new RuntimeException(exception);
+            return (T) method.invokeWithArguments(arguments);
+        } catch (final Throwable throwable) {
+            throw new RuntimeException(throwable);
         }
     }
 
@@ -442,28 +366,20 @@ public class UnsafeUtil {
 
     private static Class<?> getUnsafeClass() {
         try {
-            return Class.forName("sun.misc.Unsafe");
+            return Class.forName("jdk.internal.misc.Unsafe");
         } catch (final ClassNotFoundException bad) {
             try {
-                return Class.forName("jdk.internal.misc.Unsafe");
+                return Class.forName("sun.misc.Unsafe");
             } catch (final ClassNotFoundException exception) {
                 throw new RuntimeException(exception);
             }
         }
     }
 
-    private static Method getDefineClass() {
-        try {
-            return getMethod("defineClass", String.class, byte[].class, int.class, int.class, ClassLoader.class, ProtectionDomain.class);
-        } catch (final RuntimeException gone) {
-            throw new RuntimeException(gone);
-        }
-    }
-
     private static MethodHandle getDefineClassHandle() {
         try {
-            return LOOKUP.findVirtual(Class.forName("jdk.internal.access.JavaLangAccess"), "defineClass", MethodType.methodType(Class.class, ClassLoader.class, String.class, byte[].class, ProtectionDomain.class, String.class));
-        } catch (final NoSuchMethodException | IllegalAccessException | ClassNotFoundException exception) {
+            return IMPL_LOOKUP.findVirtual(CLASS, "defineClass", MethodType.methodType(Class.class, String.class, byte[].class, int.class, int.class, ClassLoader.class, ProtectionDomain.class));
+        } catch (final NoSuchMethodException | IllegalAccessException exception) {
             throw new RuntimeException(exception);
         }
     }
@@ -492,16 +408,6 @@ public class UnsafeUtil {
         LOGGER.info("UnsafeUtil init!");
 
         try {
-            if (ReflectionUtil.JAVA_9) {
-                defineClass = null;
-                defineClassHandle = getDefineClassHandle();
-                javaLangAccess = ReflectionUtil.invoke(ReflectionUtil.getDeclaredMethod("jdk.internal.access.SharedSecrets", "getJavaLangAccess"), null);
-            } else {
-                defineClass = getDefineClass();
-                defineClassHandle = null;
-                javaLangAccess = null;
-            }
-
             FIELD_OFFSET = objectFieldOffset(FirstInt.class.getField("val"));
 
             if (FIELD_OFFSET == 8) { // 32bit jvm
